<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addCalfParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.calftracker.project.activities.AddCalfActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addCalfLayout">

            <android.support.constraint.Guideline
                android:id="@+id/vertical55percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.55" />

            <android.support.constraint.Guideline
                android:id="@+id/vertical45percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="50dp"
                android:onClick="clickCancelButton"
                android:text="Cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDOB" />

            <Button
                android:id="@+id/buttonAddCalf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickAddCalfButton"
                android:text="Next"
                app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/buttonCancel" />

            <TextView
                android:id="@+id/textViewIDNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add_calf_ID_Number"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintTop_toBottomOf="@+id/buttonNewAddPhoto" />

            <TextView
                android:id="@+id/textViewDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="end"
                android:text="@string/add_calf_DOB"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGender" />

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/add_calf_gender"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintTop_toBottomOf="@+id/textViewIDNumber" />

            <TextView
                android:id="@+id/textViewDisplayDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:hint="@string/add_calf_select_date"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewDOB"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/textViewDOB" />

            <EditText
                android:id="@+id/editTextGetID"
                style="@android:style/Widget.AutoCompleteTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/add_calf_get_ID"
                android:inputType="number"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewIDNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/textViewIDNumber" />

            <TextView
                android:id="@+id/textViewSelectGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="start"
                android:hint="@string/add_calf_select_gender"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewGender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/textViewGender" />

            <Button
                android:id="@+id/buttonNewAddPhoto"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="32dp"
                android:onClick="onClickAddPhotoButton"
                android:text="@string/add_calf_take_photo"
                android:textAllCaps="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonNewDeletePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:onClick="onClickDeletePhotoButton"
                android:text="@string/calf_profile_delete_photo"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewCaptured" />

            <Button
                android:id="@+id/buttonNewChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickAddPhotoButton"
                android:text="@string/calf_profile_change_photo"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/buttonNewDeletePhoto"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/buttonNewDeletePhoto" />

            <ImageView
                android:id="@+id/imageViewCaptured"
                android:layout_width="165dp"
                android:layout_height="122dp"
                android:layout_marginTop="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
